Prevent content jump on load

--- a/src/scss/page/_about.scss
+++ b/src/scss/page/_about.scss
@@ -111,7 +111,9 @@ body > main.about {
         border-radius: 100%;
         box-shadow: 0 0 10px rgba($navy, .25);
         display: inline-block;
+        height: 9.75rem;
         margin-bottom: 1rem;
+        width: 9.75rem;
       }
 
       figcaption {
